# advent

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  utils.h
10/: err.txt  main.cpp  test.txt
11/: main.cpp
12/: main.cpp  test.txt
13/: main.cpp
14/: main.cpp
15/: main.cpp.txt
17/: main.cpp.txt
18/: main.cpp.txt
19/: main.cpp.txt  test.txt
22/: err.txt
4/: main.cpp
6/: main.cpp
7/: main.cpp
8/: main.cpp
9/: main.cpp
